[cmake,meson] skip tests/* under native Windows
tests/* do not run under native Windows; not written for Windows paths

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -21,6 +21,9 @@ executable('scgi-responder',
 	dependencies: [ common_flags, socket_libs ]
 )
 
+# tests/* do not run under native Windows; not written for Windows paths
+if target_machine.system() != 'windows'
+
 env = environment()
 env.set('srcdir', meson.current_source_dir())
 env.set('top_builddir', meson.build_root())
@@ -38,3 +41,5 @@ foreach t: tests
 	test(t, find_program('./' + t), env: env, is_parallel: false)
 endforeach
 test('cleanup', find_program('./cleanup.sh'), env: env, is_parallel: false)
+
+endif # (target_machine.system() != 'windows')
