[ci] skip 32-bit builds on Windows; save resources

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -145,7 +145,8 @@ jobs:
     name: Windows-VisualStudio-${{matrix.platform}}
     strategy:
       matrix:
-        platform: ['x64', 'win32']
+        platform: ['x64']
+        #platform: ['x64', 'win32']
     steps:
       - uses: actions/checkout@v4
       - uses: ilammy/msvc-dev-cmd@v1
