--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -244,7 +244,7 @@ jobs:
     name: Linux-alpine-${{matrix.platform}}
     strategy:
       matrix:
-        platform: ['x86','armhf','armv7','aarch64','ppc64le','riscv64']
+        platform: ['x86','armhf','armv7','aarch64','ppc64le','riscv64','s390x']
     steps:
       - uses: actions/checkout@v4
       - uses: jirutka/setup-alpine@v1
