--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -163,6 +163,35 @@ jobs:
 #            # ctest --no-tests=error is also failing to fail/cause CI to fail
 #            ctest -V --test-dir build --build-config Release --no-tests=error
 
+  Windows-Cygwin:
+    runs-on: windows-latest
+    env:
+      CYGWIN: winsymlinks:native
+    steps:
+      - run: git config --global core.autocrlf input
+      - uses: actions/checkout@v4
+      - uses: cygwin/cygwin-install-action@master
+        with:
+          packages: >
+            autoconf automake libtool m4 make
+            cmake meson ninja scons
+            gcc-g++ git pkgconf perl
+            libpcre2-devel
+            libnettle-devel gnutls-devel mbedtls-devel libnss-devel libssl-devel
+            libbrotli-devel libdeflate-devel zlib-devel libzstd-devel
+            libsasl2-devel libkrb5-devel libdbi-devel openldap-devel
+            libmariadb-devel libpq-devel
+            libmaxminddb-devel libunwind-devel lua-devel lua5.1-devel
+            libxml2-devel libuuid-devel libsqlite3-devel
+      - name: Compile and Test
+        #shell: C:\cygwin\bin\bash.exe --noprofile --norc -o igncr -eo pipefail '{0}'
+        shell: C:\cygwin\bin\bash.exe --login -o igncr -eo pipefail '{0}'
+        run: |
+          set -e
+          export PATH=/usr/bin:$(cygpath ${SYSTEMROOT})/system32
+          export NO_PAM=1 NO_UNWIND=1 NO_WOLFSSL=1
+          cd "${{github.workspace}}" && scripts/ci-build.sh autobuild
+
   Windows-VisualStudio:
     runs-on: windows-latest
     name: Windows-VisualStudio-${{matrix.platform}}
