--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,10 +13,12 @@ jobs:
     name: Linux-ubuntu-${{matrix.platform}}-gcc
     strategy:
       matrix:
-        platform: ['x64', 'x86']
+        platform: ['x64']
     steps:
       - uses: actions/checkout@v4
       - uses: egor-tensin/setup-gcc@v1
+        with:
+          platform: ${{matrix.platform}}
       - name: Install packages
         run: |
           sudo apt-get install cmake meson ninja-build pkg-config perl scons \
@@ -42,10 +44,12 @@ jobs:
     name: Linux-ubuntu-${{matrix.platform}}-clang
     strategy:
       matrix:
-        platform: ['x64', 'x86']
+        platform: ['x64']
     steps:
       - uses: actions/checkout@v4
       - uses: egor-tensin/setup-clang@v1
+        with:
+          platform: ${{matrix.platform}}
       - name: Install packages
         run: |
           sudo apt-get install cmake meson ninja-build pkg-config perl scons \
