--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -75,14 +75,20 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install packages
         run: |
-          brew install perl
-          python3 -m pip install meson ninja
+          brew install meson ninja pkg-config pcre2 perl \
+            gnutls libressl mbedtls nettle nss wolfssl \
+            cyrus-sasl krb5 libdbi openldap \
+            mariadb-connector-c libpq \
+            brotli libdeflate zlib zstd \
+            libmaxminddb lua \
+            libxml2 ossp-uuid sqlite
+          # autoconf automake libtool m4 cmake scons
       - name: Compile and Test
         run: |
           set -e
-          meson setup "${{github.workspace}}/build" -Dwarning_level=3
-          meson compile -C "${{github.workspace}}/build" --verbose
-          meson test -C "${{github.workspace}}/build" --verbose
+          # TODO: figure out why krb5 libpq sasl not found by build
+          export NO_KRB5=1 NO_PGSQL=1 NO_SASL=1 NO_UNWIND=1
+          cd "${{github.workspace}}" && scripts/ci-build.sh meson
 
   DragonflyBSD:
     runs-on: ubuntu-latest
