[ci] more featureful build on NetBSD
Note: future: build could be improved to expand library paths instead of
using e.g. from -lbrotlienc to /usr/pkg/lib/libbrotlienc.so, in order to
avoid need to set LD_LIBRARY_PATH=/usr/pkg/lib.  Alternatively, pass
linker flags to set -rpath to include /usr/pkg/lib.  (Also, still need
to set CFLAGS=/usr/pkg/include and LDFLAGS=/usr/pkg/lib during build
configuration so that libraries are found during feature checks.)

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -132,12 +132,18 @@ jobs:
       - uses: vmactions/netbsd-vm@v1
         with:
           prepare: |
-            pkg_add cmake pkgconf pcre2 perl
+            pkg_add cmake ninja pkgconf pcre2 perl \
+              gnutls libressl mbedtls nettle nss wolfssl \
+              cyrus-sasl mit-krb5 libdbi openldap-client \
+              mariadb-client postgresql16-client \
+              brotli libdeflate zlib zstd \
+              libmaxminddb libunwind lua51 lua54 \
+              libuuid libxml2 sqlite3
+          # autoconf automake gmake libtool m4 py311-scons
           run: |
             set -e
-            cmake -S "${{github.workspace}}" -B "build" -Wno-dev -DCMAKE_BUILD_TYPE=Release
-            cmake --build build --config Release
-            ctest -V --test-dir build --build-config Release
+            export NO_UNWIND=1
+            cd "${{github.workspace}}" && scripts/ci-build.sh cmake
 
   OpenBSD:
     runs-on: ubuntu-latest
