--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -778,7 +778,7 @@ if(WITH_LUA)
 	if(WITH_LUA_VERSION)
 		pkg_search_module(LUA REQUIRED ${WITH_LUA_VERSION})
 	else()
-		pkg_search_module(LUA REQUIRED lua5.4 lua-5.4 lua5.3 lua-5.3 lua5.2 lua-5.2 lua5.1 lua-5.1 lua)
+		pkg_search_module(LUA REQUIRED lua54 lua5.4 lua-5.4 lua53 lua5.3 lua-5.3 lua52 lua5.2 lua-5.2 lua51 lua5.1 lua-5.1 lua)
 	endif()
 	message(STATUS "found lua at: INCDIR: ${LUA_INCLUDE_DIRS} LIBDIR: ${LUA_LIBRARY_DIRS} LDFLAGS: ${LUA_LDFLAGS} CFLAGS: ${LUA_CFLAGS}")
 	set(HAVE_LUA_H  1 "Have liblua header")
